--- a/16_microbiome_community.Rmd
+++ b/16_microbiome_community.Rmd
@@ -239,15 +239,12 @@ k <- c(2,3,5,10)
 ClustAndPlot <- function(x) {
   # Creating the graph and running the short random walks algorithm  
   graph_clusters <- clusterRows(t(assays(tse)$clr), NNGraphParam(k=x))
-euclidean_pcoa_df$communities <- graph_clusters
-# Results of the clustering as a color for each sample  
-ggplot(data = euclidean_pcoa_df, 
-                             aes(x=pcoa1, y=pcoa2,
-                                 color = communities)) +
-  geom_point() +
-  labs(x = "PC1",
-       y = "PC2",
-       title = paste0("k = ", x))
+  euclidean_pcoa_df$communities <- graph_clusters
+  
+  # Results of the clustering as a color for each sample  
+  ggplot(data = euclidean_pcoa_df, aes(x=pcoa1, y=pcoa2, color = communities)) +
+    geom_point() +
+    labs(x = "PC1", y = "PC2", title = paste0("k = ", x))
 }
 
 # Applying the function for different k values
