--- a/16_microbiome_community.Rmd
+++ b/16_microbiome_community.Rmd
@@ -180,9 +180,6 @@ integrated analysis of high-throughput profiling
 data](https://peerj.com/articles/32/).
 
 ```{r cross-correlation1}
-if(!require(microbiomeDataSets)){
-    install.packages("microbiomeDataSets")
-}
 # Imports the data
 tse <- microbiomeDataSets::peerj32()
 
@@ -197,7 +194,7 @@ tse[[2]]
 
 ```{r cross-correlation3}
 if(!require(microbiome)){
-    install.packages("microbiome")
+    BiocManager::install("microbiome")
 }
 
 # Does log10 transform for microbiome data
