Fix: z transform is done to clr values

--- a/16_microbiome_community.Rmd
+++ b/16_microbiome_community.Rmd
@@ -58,7 +58,8 @@ library(ggplot2)
 # Does clr-transformation
 tse_phylum <- transformSamples(tse_phylum, method = "clr", pseudocount = 1)
 # Does z-transformation
-tse_phylum <- transformFeatures(tse_phylum, method = "z", name = "clr_z")
+tse_phylum <- transformFeatures(tse_phylum, abund_values = "clr", 
+                                method = "z", name = "clr_z")
 # Melts the assay
 df <- meltAssay(tse_phylum, assay_name = "clr_z")
 
@@ -93,7 +94,8 @@ tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces"
 # Does clr-transformation
 tse_phylum_subset <- transformSamples(tse_phylum_subset, method = "clr", pseudocount = 1)
 # Does z-transformation
-tse_phylum_subset <- transformFeatures(tse_phylum_subset, method = "z", name = "clr_z")
+tse_phylum_subset <- transformFeatures(tse_phylum_subset, abund_values = "clr", 
+                                       method = "z", name = "clr_z")
 
 # Get 10 most abundant taxa, and subsets the data by them
 top_taxa <- getTopTaxa(tse_phylum_subset, top = 20)
