--- a/16_microbiome_community.Rmd
+++ b/16_microbiome_community.Rmd
@@ -227,19 +227,17 @@ if(!require(bluster)){
 }
 ```
 
-The algorithm used is "short random walks"[@Pons2006]. 
+The algorithm used is "short random walks" [@Pons2006]. 
 Graph is constructed using different k values (the number of nearest neighbors to consider during graph construction) 
-using the clr assay data. Then plotting the communities using UMAP ordination as a visual exploration aid.
+using the clr assay data. Then plotting the communities using UMAP [@McInnes2018] ordination as a visual exploration aid.
 
 ```{r, message=FALSE, warning=FALSE}
 library(bluster)
 library(patchwork) # For arranging several plots as a grid
 library(scater)
 
-# Calculating the log transformation required by UMAP ordination 
-tse <- transformCounts(tse, method = "log10", pseudocount = 1)
 # Performing and storing UMAP
-tse <- runUMAP(tse, name="UMAP", exprs_values="log10")
+tse <- runUMAP(tse, name="UMAP", exprs_values="clr")
 
 k <- c(2,3,5,10)
 ClustAndPlot <- function(x) {
@@ -260,8 +258,8 @@ plots <- lapply(k,ClustAndPlot)
 
 Similarly the _`bluster`_ [@R-bluster] package offers clustering diagnostics
 that can be used for judging the clustering quality (see [Assorted clustering diagnostics](http://bioconductor.org/packages/release/bioc/vignettes/bluster/inst/doc/diagnostics.html)).
-In the following, silhouette width as a diagnostic tool is computed and results are visualized
-for each case presented earlier:
+In the following, Silhouette width as a diagnostic tool is computed and results are visualized
+for each case presented earlier. For more about Silhouettes read [@Rousseeuw1987].
 
 ```{r, message=FALSE, warning=FALSE}
 
