--- a/13_microbiome_exploration.Rmd
+++ b/13_microbiome_exploration.Rmd
@@ -43,7 +43,7 @@ head(getPrevalence(se, detection = 1/100, sort = TRUE, as_relative = TRUE))
 The `detection` and `as_relative` can also be used to access, how many samples
 do pass a threshold for raw counts. Here the population prevalence (frequency) 
 at the absolute abundance threshold (`as_relative = FALSE`) at read count 1
-(`detection = TRUE`) is accessed.
+(`detection = 1`) is accessed.
 
 ```{r concepts_prevalence2}
 head(getPrevalence(se, detection = 1, sort = TRUE, abund_values = "counts",
