--- a/16_microbiome_community.Rmd
+++ b/16_microbiome_community.Rmd
@@ -230,12 +230,15 @@ if(!require(bluster)){
 The algorithm used is "short random walks" [@Pons2006]. 
 Graph is constructed using different k values (the number of nearest neighbors to consider during graph construction) 
 using the robust centered log ratio (rclr) assay data. Then plotting the communities using UMAP [@McInnes2018] ordination as a visual exploration aid.
+In the following demonstration we use the `enterotype` dataset from the [@R-mia] package.
 
 ```{r, message=FALSE, warning=FALSE}
 library(bluster)
 library(patchwork) # For arranging several plots as a grid
 library(scater)
 
+data("enterotype")
+tse <- enterotype
 tse <- transformCounts(tse, method = "rclr")
 
 # Performing and storing UMAP
