--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,16 @@
+@Article{Lahti2021bioc,
+  author =	 {Leo Lahti, Felix G.M. Ernst, Sudarshan A. Shetty and
+                  others},
+  title =	 {Microbiome data science in the {\it SummarizedExperiment}
+                  universe},
+  journal =	 {F1000Research},
+  year =	 2021,
+  volume =	 10,
+  number =	 748,
+  note =	 {(slides); version 1; not peer reviewed},
+  doi =		 {10.7490/f1000research.1118712.1}
+}
+
 
 @Article{Pasolli2017,
   author =	 {E Pasolli and L Schiffer and P Manghi and A Renson
